native/bridge/include/jpdfium.h

// Free a compiled PCRE2 pattern.
JPDFIUM_EXPORT void jpdfium_pcre2_free(int64_t pattern_handle);
// Validate a string as a credit card number using the Luhn algorithm.
// Strips spaces/dashes before validation. Returns 1 if valid, 0 if invalid.
JPDFIUM_EXPORT int32_t jpdfium_luhn_validate(const char* number);
// FlashText Dictionary NER - O(n) keyword matching
//
// Trie-based keyword processor for named-entity dictionary matching.
// Runs in O(n) time regardless of dictionary size (vs. O(n×m) for regex).

// Create a FlashText keyword processor.
JPDFIUM_EXPORT int32_t jpdfium_flashtext_create(int64_t* handle);
// Add a single keyword with its entity label (e.g., keyword="John Smith", label="PERSON").
JPDFIUM_EXPORT int32_t jpdfium_flashtext_add_keyword(int64_t handle, const char* keyword,
                                                     const char* label);
// Add multiple keywords from JSON: [{"keyword":"John Smith","label":"PERSON"}, ...]
JPDFIUM_EXPORT int32_t jpdfium_flashtext_add_keywords_json(int64_t handle, const char* json);
// Find all keyword matches in text. Returns JSON:
// [{"start":0,"end":10,"keyword":"John Smith","label":"PERSON"}, ...]
JPDFIUM_EXPORT int32_t jpdfium_flashtext_find(int64_t handle, const char* text, char** json_result);
// Free the keyword processor and all associated memory.
JPDFIUM_EXPORT void jpdfium_flashtext_free(int64_t handle);