jpdfium/src/main/java/stirling/software/jpdfium/panama/JpdfiumH.java


    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_pcre2_free(int64_t pattern_handle)
     * }
     */
    public static MemorySegment jpdfium_pcre2_free$address() {
        return jpdfium_pcre2_free.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void jpdfium_pcre2_free(int64_t pattern_handle)
     * }
     */
    public static void jpdfium_pcre2_free(long pattern_handle) {
        var mh$ = jpdfium_pcre2_free.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_pcre2_free", pattern_handle);
            }
            mh$.invokeExact(pattern_handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_luhn_validate {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_luhn_validate");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_luhn_validate(const char *number)
     * }
     */
    public static FunctionDescriptor jpdfium_luhn_validate$descriptor() {
        return jpdfium_luhn_validate.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_luhn_validate(const char *number)
     * }
     */
    public static MethodHandle jpdfium_luhn_validate$handle() {
        return jpdfium_luhn_validate.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_luhn_validate(const char *number)
     * }
     */
    public static MemorySegment jpdfium_luhn_validate$address() {
        return jpdfium_luhn_validate.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_luhn_validate(const char *number)
     * }
     */
    public static int jpdfium_luhn_validate(MemorySegment number) {
        var mh$ = jpdfium_luhn_validate.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_luhn_validate", number);
            }
            return (int)mh$.invokeExact(number);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_flashtext_create {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_flashtext_create");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_create(int64_t *handle)
     * }
     */
    public static FunctionDescriptor jpdfium_flashtext_create$descriptor() {
        return jpdfium_flashtext_create.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_create(int64_t *handle)
     * }
     */
    public static MethodHandle jpdfium_flashtext_create$handle() {
        return jpdfium_flashtext_create.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_create(int64_t *handle)
     * }
     */
    public static MemorySegment jpdfium_flashtext_create$address() {
        return jpdfium_flashtext_create.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_create(int64_t *handle)
     * }
     */
    public static int jpdfium_flashtext_create(MemorySegment handle) {
        var mh$ = jpdfium_flashtext_create.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_flashtext_create", handle);
            }
            return (int)mh$.invokeExact(handle);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_flashtext_add_keyword {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_flashtext_add_keyword");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keyword(int64_t handle, const char *keyword, const char *label)
     * }
     */
    public static FunctionDescriptor jpdfium_flashtext_add_keyword$descriptor() {
        return jpdfium_flashtext_add_keyword.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keyword(int64_t handle, const char *keyword, const char *label)
     * }
     */
    public static MethodHandle jpdfium_flashtext_add_keyword$handle() {
        return jpdfium_flashtext_add_keyword.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keyword(int64_t handle, const char *keyword, const char *label)
     * }
     */
    public static MemorySegment jpdfium_flashtext_add_keyword$address() {
        return jpdfium_flashtext_add_keyword.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keyword(int64_t handle, const char *keyword, const char *label)
     * }
     */
    public static int jpdfium_flashtext_add_keyword(long handle, MemorySegment keyword, MemorySegment label) {
        var mh$ = jpdfium_flashtext_add_keyword.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_flashtext_add_keyword", handle, keyword, label);
            }
            return (int)mh$.invokeExact(handle, keyword, label);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_flashtext_add_keywords_json {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_flashtext_add_keywords_json");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keywords_json(int64_t handle, const char *json)
     * }
     */
    public static FunctionDescriptor jpdfium_flashtext_add_keywords_json$descriptor() {
        return jpdfium_flashtext_add_keywords_json.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keywords_json(int64_t handle, const char *json)
     * }
     */
    public static MethodHandle jpdfium_flashtext_add_keywords_json$handle() {
        return jpdfium_flashtext_add_keywords_json.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keywords_json(int64_t handle, const char *json)
     * }
     */
    public static MemorySegment jpdfium_flashtext_add_keywords_json$address() {
        return jpdfium_flashtext_add_keywords_json.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_add_keywords_json(int64_t handle, const char *json)
     * }
     */
    public static int jpdfium_flashtext_add_keywords_json(long handle, MemorySegment json) {
        var mh$ = jpdfium_flashtext_add_keywords_json.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_flashtext_add_keywords_json", handle, json);
            }
            return (int)mh$.invokeExact(handle, json);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_flashtext_find {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            JpdfiumH.C_INT,
            JpdfiumH.C_LONG,
            JpdfiumH.C_POINTER,
            JpdfiumH.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_flashtext_find");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_find(int64_t handle, const char *text, char **json_result)
     * }
     */
    public static FunctionDescriptor jpdfium_flashtext_find$descriptor() {
        return jpdfium_flashtext_find.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_find(int64_t handle, const char *text, char **json_result)
     * }
     */
    public static MethodHandle jpdfium_flashtext_find$handle() {
        return jpdfium_flashtext_find.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_find(int64_t handle, const char *text, char **json_result)
     * }
     */
    public static MemorySegment jpdfium_flashtext_find$address() {
        return jpdfium_flashtext_find.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t jpdfium_flashtext_find(int64_t handle, const char *text, char **json_result)
     * }
     */
    public static int jpdfium_flashtext_find(long handle, MemorySegment text, MemorySegment json_result) {
        var mh$ = jpdfium_flashtext_find.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("jpdfium_flashtext_find", handle, text, json_result);
            }
            return (int)mh$.invokeExact(handle, text, json_result);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class jpdfium_flashtext_free {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            JpdfiumH.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("jpdfium_flashtext_free");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void jpdfium_flashtext_free(int64_t handle)
     * }
     */
    public static FunctionDescriptor jpdfium_flashtext_free$descriptor() {
        return jpdfium_flashtext_free.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void jpdfium_flashtext_free(int64_t handle)
     * }
     */
    public static MethodHandle jpdfium_flashtext_free$handle() {
        return jpdfium_flashtext_free.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void jpdfium_flashtext_free(int64_t handle)
     * }
     */
    public static MemorySegment jpdfium_flashtext_free$address() {
        return jpdfium_flashtext_free.ADDR;
    }
